Fixed zip gap at various screen sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -360,7 +360,7 @@ select {
     }
 
     .zcode {
-        flex: 0 1 111.24px;
+        flex: 0 1 27%;
     }
 
 
